<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NovoContatoActivity"
    android:gravity="center"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/novo_contato"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/et_novoContato_nome"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endereco"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/et_novoContato_endereco"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/et_novoContato_telefone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/et_novoContato_email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/bt_novoContato_cancelar"
            android:layout_margin="3dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:id="@+id/bt_novoContato_salvar"
            android:layout_margin="3dp"/>
    </LinearLayout>

</LinearLayout>